# Speedwayrs

./: Cargo.toml  DockerfileDatabase  DockerfileLoader  LICENSE.md  README.md  db_init.sql  docker-compose.yml
speedwayrs-backend/: .env  Cargo.toml  Dockerfile  run.sh
speedwayrs-backend/migrations/: 10_team_like.sql  11_player_score.sql  12_player_like.sql  13_game_player_team.sql  1_user.sql  2_session.sql  3_chat.sql  4_team.sql  5_player.sql  6_stadium.sql  7_game.sql  8_run.sql  9_run_squad.sql
speedwayrs-backend/queries/: login_user.sql  player_search.sql  register_check.sql  register_user.sql  session_expiration.sql  session_insert.sql  session_logout.sql  session_select.sql  session_update.sql  team_looses.sql  team_search.sql  team_winratio.sql  team_wins.sql
speedwayrs-backend/queries/data/: get_last_games.sql  get_liked_players.sql  get_liked_teams.sql  get_player_name.sql  get_player_stats.sql  get_player_teams.sql  match_info_games.sql  match_info_main.sql  match_info_player_score.sql  match_info_run_times.sql  match_info_team_name.sql  team_data_like.sql  team_data_matches.sql  team_data_name.sql
speedwayrs-backend/queries/utils/: check_like_player.sql  check_like_team.sql  get_messages.sql  post_like_player.sql  post_like_team.sql  post_message.sql  remove_like_player.sql  remove_like_team.sql
speedwayrs-backend/src/: account.rs  main.rs  session.rs
speedwayrs-backend/src/data/: main_info.rs  match_info.rs  mod.rs  player_data.rs  team_data.rs  team_stats.rs
speedwayrs-backend/src/utils/: chat.rs  mod.rs
speedwayrs-frontend/: Cargo.toml  index.html
speedwayrs-frontend/src/: account.rs  chat.rs  client.rs  games.rs  login.rs  main.rs  match_info.rs  navbar.rs  players.rs  signup.rs  teams.rs  utils.rs
speedwayrs-loader/: Cargo.toml  sqlx-data.json
speedwayrs-loader/queries/: create_run.sql  insert_game.sql  insert_game_team.sql  insert_player_score.sql  insert_run_squad_score.sql  place_check.sql  place_insert.sql  player_check.sql  player_insert.sql  team_check.sql  team_insert.sql
speedwayrs-loader/src/: insertion.rs  main.rs  scraper_types.rs
speedwayrs-scraper/: Cargo.toml  match.tmp  mecz.tmp  strona.tmp
speedwayrs-scraper/src/: config.rs  file.rs  http.rs  main.rs  manager.rs  season.rs
speedwayrs-scraper/src/game/: mod.rs  player.rs  run.rs
speedwayrs-scraper/src/game/team/: mod.rs  player.rs
speedwayrs-types/: Cargo.toml
speedwayrs-types/src/: lib.rs  scraper_types.rs
