[package]
name = "speedwayrs-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.23.0", features = ["full"]}
axum = {version = "0.6.1", features = ["json"]}
axum-extra = {version = "0.4.2", features = ["cookie"]}
axum-macros = "0.3.0"
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros", "time", "uuid"]}
anyhow = "1.0.66"
serde = "1.0.151"
argon2 = "0.4.1"
rand = "0.8.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = {version = "0.3.5", features = ["trace", "cors"]}

# Fake env variables
dotenvy = "0.15.6"
serde_json="1.0.89"

# Data validation
email_address = "0.2.4"

# Session id
uuid = {version = "1.2.2", features = ["v4"]}
time = "0.3.17"
http = "0.2.8"