[package]
name = "speedwayrs-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP REQUESTS
reqwest = {version = "0.11.12", features = ["blocking"]}

# ERROR HANDLING
anyhow = "1.0.66"

# HTML PARSING
scraper = "0.13.0"

# PARSING EXPRESSIONS
regex = "1.6.0"

# ONE TIME INITIALIZATION
once_cell = "1.16.0"

# COMMAND LINE ARGUMENT PARSER
clap = {version = "4.0.18", features = ["derive"]}

# THREADPOOL
threadpool = "1.8.1"