[package]
name = "speedwayrs-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP REQUESTS
reqwest = {version = "0.11.12", features = ["blocking"]}

# ERROR HANDLING
anyhow = "1.0.66"

# HTML PARSING
scraper = "0.13.0"

# PARSING EXPRESSIONS
regex = "1.6.0"

# ONE TIME INITIALIZATION
once_cell = "1.16.0"

# COMMAND LINE ARGUMENT PARSER
clap = {version = "4.0.29", features = ["derive"]}

# THREADPOOL
threadpool = "1.8.1"

# SERIALIZATION
serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0.89"

# DATE
time = {version = "0.3.17", features = ["serde", "parsing", "macros"]}

# PROGRESS BAR
indicatif = "0.17.2"